--- a/branches/megamerge/mtams/mtams-war/web/template/template.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/template/template.xhtml
@@ -7,9 +7,11 @@
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <h:outputStylesheet library="css" name="styles.css"/>
+        <title>MSA Travel Application Management System</title>
+        
+        
         <h:outputScript library="primefaces" name="jquery/jquery.js"/>
-        <script type="text/javascript" src="#{request.contextPath}/resources/jquery.stickyPanel.min.js"></script>
+        <script type="text/javascript" src="resources/jquery.stickyPanel.min.js"></script>
         <script type="text/javascript">
             jQuery().ready(function() {
                 var stickyPanelOptions = {
@@ -24,25 +26,17 @@
                  */
             });
         </script>
-        <!--
-        Need to check with marco, the style sheet ordering was not allowing our custom style sheet to load
-        last. This was recommend as a fix by optimus prime.
-        http://forum.primefaces.org/viewtopic.php?f=3&t=12807&start=50#p45833
-        http://blog.primefaces.org/?p=1433
-        we can comment out the following line to go back to the old way.
-        -->
-        <link type="text/css" rel="stylesheet" href="#{request.contextPath}/resources/css/override.css" />
-        
-        <title>MSA Travel Application Management System</title>
     </h:head>
 
     <h:body>
+        <h:outputStylesheet library="css" name="styles.css"/>
+        <link type="text/css" rel="stylesheet" href="resources/css/override.css" />
         <div id="wrap">
             <div id="header">
                 <div id="logo">
                     <h:form>
                         <h:commandLink action="#{sessionBean.homePage()}">
-                            <h:graphicImage value="/resources/img/logo.png" alt="Monash South Africa - A campus of Monash Univeristy Australia"/>
+                            <h:graphicImage value="resources/img/logo.png" alt="Monash South Africa - A campus of Monash Univeristy Australia"/>
                         </h:commandLink>
                     </h:form>
                 </div>
@@ -66,7 +60,6 @@
                 <ui:insert name="content"/>
             </div>
 
-
             <div id="footer">
                 <div class="col">
                     <h:outputText styleClass="h3" value="Quick Links"/>
@@ -76,6 +69,7 @@
                         <li><h:link value="">Contact Us</h:link></li>                    
                     </ul>
                 </div>
+
                 <h:outputText styleClass="h3" value="Legal"/>
 
                 <p class="legal">Created by the School of IT, Monash South Africa 2013</p>	
