CRCDialog include into final costing form working as expected. Ready for presentation

--- a/branches/megamerge/mtams/mtams-war/web/template/CRCDialog.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/template/CRCDialog.xhtml
@@ -16,12 +16,12 @@
                 -->
             </ui:remove>
 
-            <p:dialog header="Setect a country region and city" widgetVar="#{widgetVarParam}">
+            <p:dialog header="Setect a country region and city" widgetVar="#{widgetVarParam}">  
 
                 <div id="DTdivtest" class="divCurrency" >
                     <!--
 **************************
-country
+country CRC
 **************************
                     -->
 
@@ -45,8 +45,6 @@ country
                             <p:ajax event="rowSelect" 
                                     update=":#{updateDLGfromRegionID}:RegionSel" 
                                     />
-
-
 
 
                             <p:column headerText="Country Name"
@@ -94,7 +92,7 @@ country
 
                     <!--
                     **************************
-                    REGION
+                    REGION CRC
                     **************************
                     -->
 
@@ -172,7 +170,7 @@ country
 
                     <!--
                   **************************
-                  CITY
+                  CITY CRC
                   **************************
                     -->
 
