--- a/mtams/mtams-war/web/template/currencyDialog.xhtml
+++ b/mtams/mtams-war/web/template/currencyDialog.xhtml
@@ -18,7 +18,7 @@
                                      filteredValue="#{dataLookUpBean.currencyFilteredList}"
                                      widgetVar="currencies"
                                      emptyMessage="No data matches your criteria"
-                                     selection="#{dataLookUpBean.aCurrencySelection}" selectionMode="single" scrollRows="20"  
+                                     selection="#{dataLookUpBean.curSelect}" selectionMode="single" scrollRows="20"  
                                      scrollable="true" liveScroll="true" scrollHeight="162"
 
                                      > 
