fixed so they now are not hardcoded finalcosting app and account ids for testing. Create now goes home to approval home
done with Edit and view plus css changes in sytles.css. 
removed authorisation from edit, and view. Until I can fix the persistance update in the ejb handler.

--- a/branches/megamerge/mtams/mtams-war/web/resources/css/override.css
+++ b/branches/megamerge/mtams/mtams-war/web/resources/css/override.css
@@ -22,11 +22,19 @@
 
 */
 
-/*
+.fclabel {
+    vertical-align: top;
+    margin-right: 10%;
+    width:250px;s
+}
+
+.fcvalue { 
+    float:left;
+}
 
 .ui-panelgrid td {
     border: none;
-    float: left;
+    
 }
 
 
@@ -63,9 +71,9 @@ td.columnLabel  {
 }
 
 
-Over ride need to match department dropdown width
+/*Over ride need to match department dropdown width*/
 
-.inputWidthDepartment {
+/*.inputWidthDepartment {
     width: 257px;
 }
 
@@ -80,7 +88,7 @@ input {
 
 .inputWidth {
     width: 163px;
-}
+}*/
 
 
 
@@ -93,4 +101,4 @@ input {
 
 .butCalc {
     width: 171px;
-}*/
+}
