--- a/branches/megamerge/mtams/mtams-war/web/resources/css/styles.css
+++ b/branches/megamerge/mtams/mtams-war/web/resources/css/styles.css
@@ -198,6 +198,18 @@ body {
     left:0px;
 }
 
+.scrollup{
+    width:40px;
+    height:40px;
+    opacity:0.3;
+    position:fixed;
+    bottom:50px;
+    right:100px;
+    display:none;
+    text-indent:-9999px;
+    background: url('img/icon_top.png') no-repeat;
+}
+
 .ui-menu-list {
     margin: 1px 15px !important;
 }
