- forex pdf - authorization pdf - fixed help fieldsets
BUG: Itinerary dates null pointer.

--- a/branches/megamerge/mtams/mtams-war/web/resources/css/styles.css
+++ b/branches/megamerge/mtams/mtams-war/web/resources/css/styles.css
@@ -1,3 +1,11 @@
+.fieldsetForm fieldset legend {
+    width: 30%;
+}
+
+.fieldsetForm fieldset {
+    margin-bottom: 2%;
+}
+
 .ui-selectonemenu {
     width: 100% !important;
 }
